tests/compile_fail/try_from/empty_type.rs
#[derive(derive_more::TryFrom)]
#[try_from(usize)]
enum Enum {
    Field,
}

fn main() {}
